text alignment fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,6 @@ h4 {
     font-size: 16px;
     font-family: "Karla";
     color: hsl(218, 22%, 67%);
-    padding: 0px;
 }
 
 .signUp {
